[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/turret.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Turret.gd" type="Script" id=2]
[ext_resource path="res://Assets/turretRadius.png" type="Texture" id=3]
[ext_resource path="res://Assets/turretPrkotina.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 48.0

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[sub_resource type="CircleShape2D" id=3]
radius = 80.0

[node name="Turret" type="Node2D"]
scale = Vector2( 2, 2 )
z_index = 5
script = ExtResource( 2 )

[node name="ShootRadiusSprite" type="Sprite" parent="."]
rotation = 6.28319
scale = Vector2( 3.75, 3.75 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
z_index = 7
z_as_relative = false
texture = ExtResource( 5 )

[node name="PickUpRadius" type="Area2D" parent="." groups=[
"Turret",
]]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpRadius"]
visible = false
shape = SubResource( 1 )

[node name="BatteryPosition" type="Position2D" parent="."]
position = Vector2( 0, 4.00516 )

[node name="BatteryRadius" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="BatteryRadius"]
visible = false
shape = SubResource( 2 )

[node name="ShootRadius" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootRadius"]
visible = false
shape = SubResource( 3 )

[node name="Bullets" type="Node2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[node name="ShootingPosition" type="Position2D" parent="."]
[connection signal="area_entered" from="BatteryRadius" to="." method="_on_BatteryRadius_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
